fix: fix overlapping nodes in the tree, by adding scroll bars for nodes with a lot of text. style: changed nodes color and nodes sizings.

--- a/src/components/Graphs Page Components/Tree Components/style/TreeStyle.css
+++ b/src/components/Graphs Page Components/Tree Components/style/TreeStyle.css
@@ -3,25 +3,24 @@
   stroke-width: 0;
 }
 .paperNameText:hover {
-  fill: red;
+  color:red;
   stroke-width: 0;
 }
-
+.NodeTexts {
+  padding: 10px;
+}
 .differingNodeHeaderText {
-  font-size: 20px;
+  font-size: 15px;
   font-family: sans-serif;
-  fill: blue;
+  color: navy;
+  stroke-width: 0;
+}
+.paperNameText{
+  font-size: 15px;
+  font-family: sans-serif;
+  color: black;
   stroke-width: 0;
 }
 .nodeRect {
-  fill: green;
-}
-
-.node__branch {
-  color: yellow;
-}
-
-.node__leaf {
-  fill: green;
-
+  fill: skyblue;
 }
